--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,11 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "src",
+    "types": ["vite-plugin-svgr/client"],
+    "paths": {
+      "app/*": ["app/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
