--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "skipLibCheck": true,
     "baseUrl": "src",
     "paths": {
-      "app/*": ["app/*"]
+      "app/*": ["app/*"],
+      "pages/*": ["pages/*"],
+      "shared/*": ["shared/*"]
     },
 
     /* Bundler mode */
