--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "paths": {
       "app/*": ["app/*"],
       "pages/*": ["pages/*"],
-      "shared/*": ["shared/*"]
+      "shared/*": ["shared/*"],
+      "widgets/*": ["widgets/*"]
     },
 
     /* Bundler mode */
