Implemented Search Functionality and Integrated SearchInput Component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "paths": {
       "app/*": ["app/*"],
       "pages/*": ["pages/*"],
-      "shared/*": ["shared/*"],
-      "widgets/*": ["widgets/*"]
+      "shared/*": ["shared/*"]
     },
 
     /* Bundler mode */
