--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "baseUrl": "src",
     "paths": {
       "app/*": ["app/*"],
-      "pages/*": ["pages/*"],
+      "components/*": ["components/*"],
       "shared/*": ["shared/*"]
     },
 
